# tegra-boot-tools

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  bct.h  bct_t18x.c  bct_t19x.c  bct_t21x.c  bootinfo.c  bootinfo.h  bup.c  bup.h  config.h.in  configure.ac  gpt.c  gpt.h  posix-crc32.c  posix-crc32.h  smd.c  smd.h  soctype.c  soctype.h  tegra-boot-control.c  tegra-boot-tools.pc.in  tegra-bootinfo.c  tegra-bootloader-update.c  util.c  util.h  ver.c  ver.h
config-files/: bootcountcheck.service.in  machine-name.conf.in  rootfsdev.conf.in  update_bootinfo.service.in
doc/: bootinfo.md  tegra-boot-control.md  tegra-bootinfo.md  tegra-bootloader-update.md
nvidia/: nvcommon.h
nvidia/t18x/: arse0.h  nvboot_bct.h  nvboot_config.h  nvboot_crypto_aes_param.h  nvboot_crypto_ecc_param.h  nvboot_crypto_param.h  nvboot_crypto_rsa_param.h  nvboot_crypto_se_param.h  nvboot_crypto_sha_param.h  nvboot_crypto_signatures.h  nvboot_devparams.h  nvboot_error.h  nvboot_fuse.h  nvboot_hash.h  nvboot_osc.h  nvboot_sata_param.h  nvboot_sdmmc_param.h  nvboot_sdram_param.h  nvboot_sdram_param_generated.h  nvboot_se_aes.h  nvboot_se_defs.h  nvboot_se_rsa.h  nvboot_section_defs.h  nvboot_spi_flash_param.h  nvboot_ufs_param.h  nvboot_usb3_param.h  nvboot_util_int.h
nvidia/t19x/: arse0.h  nvboot_bct.h  nvboot_boot_component.h  nvboot_config.h  nvboot_crypto_aes_param.h  nvboot_crypto_ecc_param.h  nvboot_crypto_eddsa_param.h  nvboot_crypto_param.h  nvboot_crypto_public_keystore.h  nvboot_crypto_rsa_param.h  nvboot_crypto_se_param.h  nvboot_crypto_sha_param.h  nvboot_crypto_signatures.h  nvboot_devparams.h  nvboot_error.h  nvboot_fuse.h  nvboot_hash.h  nvboot_sata_param.h  nvboot_sdmmc_param.h  nvboot_sdram_param.h  nvboot_sdram_param_generated.h  nvboot_se_aes.h  nvboot_se_defs.h  nvboot_se_rsa.h  nvboot_section_defs.h  nvboot_spi_flash_param.h  nvboot_ufs_param.h  nvboot_util_int.h
scripts/: Makefile.am  bootcountcheck  nv_update_engine  nvbootctrl
scripts/lib/: finished-booting.target  menu-common.in  tools-common.in  update_bootinfo.service.in
scripts/src/: tegra-sysinstall-menu.in  tegra-sysinstall.in
tmpfiles/: tegra-bootinfo.conf.in
tools/: Makefile.am  bup.c  gpt.h  tegra-bootinfo.c
